# ESP32C6_Project

./: README.md
Extras/hello_world/main/: hello_world_main.c
blink/: CMakeLists.txt  sdkconfig  sdkconfig.old
blink/main/: CMakeLists.txt  blink_example_main.c  idf_component.yml
components (..:)/esp_lvgl_port/: idf_component.yml
components (..:)/lvgl/: idf_component.yml
hello_world/: sdkconfig  sdkconfig.old
i2c_oled/: sdkconfig 2.old
i2c_oled/main/: CMakeLists.txt  animation.c  friday_ui.c  i2c_oled_example_main.c  jarvis_ui.c  javis_ui.c  lvgl_demo_ui.c
mic_test/: sdkconfig.old
mic_test/main/: CMakeLists.txt  mic_test.c
multi_device/: sdkconfig
project_1_i2c_oled/: CMakeLists.txt  sdkconfig  sdkconfig 2  sdkconfig 3
project_1_i2c_oled/main/: idf_component.yml
project_2_mic_test/: CMakeLists.txt  sdkconfig
project_2_mic_test/main/: CMakeLists.txt  mic_test.c
project_4_temp_sensor/main/: temp_sensor_main.c
rainmaker_main_project/: CMakeCache.txt  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
rainmaker_main_project/main/: CMakeLists.txt  app_main.c  mic_test.c  oled.c
rainmaker_main_project/main/mic_test/: mic_test.c  mic_test.h
rainmaker_main_project/main/oled/: CMakeLists.txt  jarvis_ui.c  jarvis_ui.h  oled.c  oled.h
